--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel-loader": "^8.0.5",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "g": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0",
